--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <section>
     <h2>Bienvenidos</h2>
-    <p>Explora nuestro proyecto FrutiSnacks y descubre cómo estamos transformando la alimentación saludable.</p>
+    <p>FrutiSnacks, un proyecto empresarial innovador que responde a la necesidad de ofrecer snacks saludables, nutritivos y deliciosos elaborados a base de frutas deshidratadas. La propuesta se fundamenta en aprovechar las propiedades naturales de las frutas tropicales y locales, sometiéndolas a un proceso de deshidratación controlado que conserva sus nutrientes esenciales, fibra, vitaminas y minerales, al tiempo que elimina la necesidad de conservantes artificiales o azúcares añadidos. </p>
 </section>
 
 <footer>Contáctenos al : 2134-9038 o en nuestras redes FrutiSnacksOficial 
@@ -54,3 +54,4 @@ setInterval(moveCarousel, 3000); // 3 segundos
 
 </body>
 </html>
+
