--- a/objetivo.html
+++ b/objetivo.html
@@ -25,9 +25,19 @@
         <br>Esta iniciativa busca promover hábitos de consumo más saludables entre niños, jóvenes y adultos mediante productos prácticos, seguros y accesibles. Asimismo, la propuesta pretende posicionarse como una opción competitiva frente a los snacks altamente procesados,fomentando la ingesta de frutas en un formato atractivo y conveniente, que contribuya al bienestar integral de los consumidores.</p></br>
 </section>
 
+<div class="carousel-container">
+    <div class="carousel" id="carousel">
+        <img src="pics/fruta7.jpg" alt="">
+        <img src="pics/fruta4.jpg" alt="">
+        <img src="pics/fruta1.jpg" alt="">
+    </div>
+</div>
+
+    
 <footer>Contáctenos al : 2134-9038 o en nuestras redes FrutiSnacksOficial 
       <br>© 2025 FrutiSnacks – Snacks Naturales</br>
 </footer>
 
 </body>
 </html>
+
