--- a/objetivo.html
+++ b/objetivo.html
@@ -25,11 +25,11 @@
         <br>Esta iniciativa busca promover hábitos de consumo más saludables entre niños, jóvenes y adultos mediante productos prácticos, seguros y accesibles. Asimismo, la propuesta pretende posicionarse como una opción competitiva frente a los snacks altamente procesados,fomentando la ingesta de frutas en un formato atractivo y conveniente, que contribuya al bienestar integral de los consumidores.</p></br>
 </section>
 
-<div class="carousel-container">
-    <div class="carousel" id="carousel">
-        <img src="pics/fruta7.jpg" alt="">
-        <img src="pics/fruta4.jpg" alt="">
-        <img src="pics/fruta1.jpg" alt="">
+<div class="mini-carousel-container">
+    <div class="mini-carousel">
+        <img src="pics/obj1.jpg">
+        <img src="pics/obj2.jpg">
+        <img src="pics/obj3.jpg">
     </div>
 </div>
 
@@ -40,4 +40,5 @@
 
 </body>
 </html>
+
 
