Enhance producto.html with product section
Added a new section for product information and updated the footer.

--- a/producto.html
+++ b/producto.html
@@ -99,9 +99,18 @@
 
 </section>
 
+<section class="producto-fondo">
+    <div class="producto-texto">
+        <h2>Nuestros Productos</h2>
+        <p>Snacks saludables, naturales y listos para disfrutar.</p>
+    </div>
+</section>
+    
+
 <footer>Contáctenos al : 2134-9038 o en nuestras redes FrutiSnacksOficial 
       <br>© 2025 FrutiSnacks – Snacks Naturales</br>
 </footer>
 
 </body>
 </html>
+
