--- a/producto.html
+++ b/producto.html
@@ -100,10 +100,7 @@
 </section>
 
 <section class="producto-fondo">
-    <div class="producto-texto">
-        <h2>Nuestros Productos</h2>
-        <p>Snacks saludables, naturales y listos para disfrutar.</p>
-    </div>
+    <div class="producto-texto"> </div>
 </section>
     
 
@@ -113,4 +110,5 @@
 
 </body>
 </html>
+
 
