Update producto.html with new 'Productos' section
Added a new section for 'Productos' and updated the HTML structure.

--- a/producto.html
+++ b/producto.html
@@ -100,7 +100,9 @@
 </section>
 
 <section class="producto-fondo">
-    <div class="producto-texto"> </div>
+    <div class="producto-texto">
+        <h2>Productos</h2>
+    </div>
 </section>
     
 
@@ -110,5 +112,6 @@
 
 </body>
 </html>
+
 
 
