Enhance sostenibilidad.html with new section
Added a new section for product sustainability and improved structure.

--- a/sostenibilidad.html
+++ b/sostenibilidad.html
@@ -75,12 +75,17 @@
 </p>
 </section>
 
-
+<section class="producto-fondo">
+    <div class="producto-texto">
+        <h2>Sostenibilidad</h2>
+    </div>
+</section>
 
 <footer>Contáctenos al : 2134-9038 o en nuestras redes FrutiSnacksOficial 
       <br>© 2025 FrutiSnacks – Snacks Naturales</br>
 </footer>
 </body>
 </html>
+
 
 
