--- a/sostenibilidad.html
+++ b/sostenibilidad.html
@@ -75,8 +75,8 @@
 </p>
 </section>
 
-<section class="producto-fondo">
-    <div class="producto-texto">
+<section class="sostenibilidad-fondo">
+    <div class="sostenibilidad-texto">
         <h2>Sostenibilidad</h2>
     </div>
 </section>
@@ -86,6 +86,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
